Add new user interface for LDAP registration  - Extend with user delete capability

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -103,6 +103,9 @@
                         <li>
                             <a href="{{ url_for('auth.create_ldap_user') }}">Create LDAP User</a>
                         </li>
+                        <li>
+                            <a href="{{ url_for('auth.delete_ldap_user') }}">Delete LDAP User</a>
+                        </li>
                     </ul>
                 </li>
           </ul>
