Add new user interface for LDAP registration  - Extend with Modify LDAP User

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -104,6 +104,9 @@
                             <a href="{{ url_for('auth.create_ldap_user') }}">Create LDAP User</a>
                         </li>
                         <li>
+                            <a href="{{ url_for('auth.modify_ldap_user') }}">Update LDAP User</a>
+                        </li>
+                        <li>
                             <a href="{{ url_for('auth.delete_ldap_user') }}">Delete LDAP User</a>
                         </li>
                     </ul>
