Add new user interface for LDAP registration  - Extend with Change Password

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -107,6 +107,9 @@
                             <a href="{{ url_for('auth.modify_ldap_user') }}">Update LDAP User</a>
                         </li>
                         <li>
+                            <a href="{{ url_for('auth.change_password') }}">Change Password</a>
+                        </li>
+                        <li>
                             <a href="{{ url_for('auth.delete_ldap_user') }}">Delete LDAP User</a>
                         </li>
                     </ul>
