Add an EDI user password reset tool

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -110,6 +110,9 @@
                             <a href="{{ url_for('auth.change_password') }}">Change Password</a>
                         </li>
                         <li>
+                            <a href="{{ url_for('auth.reset_password_init') }}">Reset Password</a>
+                        </li>
+                        <li>
                             <a href="{{ url_for('auth.delete_ldap_user') }}">Delete LDAP User</a>
                         </li>
                     </ul>
