Add new user interface for LDAP registration  - Extend with List LDAP Users capability

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -115,6 +115,9 @@
                         <li>
                             <a href="{{ url_for('auth.delete_ldap_user') }}">Delete LDAP User</a>
                         </li>
+                        <li>
+                            <a href="{{ url_for('auth.list_ldap_users') }}">List LDAP Users</a>
+                        </li>
                     </ul>
                 </li>
           </ul>
