Replace all the WTF quick_form() calls with calls to the individual WTF form fields. This allows for greater flexibility in organizing the form and styling the buttons, as well as inclusion of a reset ("Clear") button on each of the forms.

--- a/webapp/auth/templates/change_password.html
+++ b/webapp/auth/templates/change_password.html
@@ -5,7 +5,16 @@
     <h1>Change EDI Password</h1>
     <div class="row">
         <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
+            <form method="POST" action="" class="form" role="form">
+                {{ form.csrf_token }}
+                <h5>Please fill in <em>all fields</em> below:</h5>
+                {{ wtf.form_field(form.uid) }}
+                {{ wtf.form_field(form.password) }}
+                {{ wtf.form_field(form.new_password) }}
+                {{ wtf.form_field(form.confirm_new_password) }}
+                <input class="btn btn-primary" type="submit" value="Change Password"/>
+                <input class="btn btn-primary" type="reset" value="Clear"/>
+            </form>
         </div>
     </div>
 {% endblock %}
