--- a/webapp/auth/templates/modify_ldap_user.html
+++ b/webapp/auth/templates/modify_ldap_user.html
@@ -15,7 +15,8 @@
                 {{ wtf.form_field(form.sn) }}
                 {{ wtf.form_field(form.email) }}
                 {{ wtf.form_field(form.confirm_email) }}
-                {{ wtf.form_field(form.submit) }}
+                <input class="btn btn-primary" type="submit" value="Update User"/>
+                <input class="btn btn-primary" type="reset" value="Clear"/>
             </form>
         </div>
     </div>
