--- a/webapp/auth/templates/reset_ldap_password.html
+++ b/webapp/auth/templates/reset_ldap_password.html
@@ -21,7 +21,13 @@
     <h1>Reset EDI User Password</h1>
     <div class="row">
         <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
+            <form method="POST" action="" class="form" role="form">
+                {{ form.csrf_token }}
+                {{ wtf.form_field(form.password) }}
+                {{ wtf.form_field(form.confirm_password) }}
+                <input class="btn btn-primary" type="submit" value="Submit"/>
+                <input class="btn btn-primary" type="reset" value="Clear"/>
+            </form>
         </div>
     </div>
     {% endblock %}
