--- a/webapp/auth/templates/delete_ldap_user.html
+++ b/webapp/auth/templates/delete_ldap_user.html
@@ -5,7 +5,12 @@
     <h1>Delete EDI LDAP User</h1>
     <div class="row">
         <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
+            <form method="POST" action="" class="form" role="form">
+                {{ form.csrf_token }}
+                {{ wtf.form_field(form.uid) }}
+                <input class="btn btn-primary" type="submit" value="Delete User"/>
+                <input class="btn btn-primary" type="reset" value="Clear"/>
+            </form>
         </div>
     </div>
 {% endblock %}
