--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -104,7 +104,7 @@
                             <a href="{{ url_for('auth.create_ldap_user') }}">Create LDAP User</a>
                         </li>
                         <li>
-                            <a href="{{ url_for('auth.modify_ldap_user') }}">Update LDAP User</a>
+                            <a href="{{ url_for('auth.modify_ldap_user_init') }}">Update LDAP User</a>
                         </li>
                         <li>
                             <a href="{{ url_for('auth.change_password') }}">Change Password</a>
