Reformat the Modify User web form.

--- a/webapp/auth/templates/modify_ldap_user.html
+++ b/webapp/auth/templates/modify_ldap_user.html
@@ -7,13 +7,14 @@
         <div class="col-md-4">
             <form method="POST" action="" class="form" role="form">
                 {{ form.csrf_token }}
-                <h5>Please re-enter the Password for user <em>{{ uid }}</em> and update info in the other fields below as necessary:</h5>
-                {{ wtf.form_field(form.password) }}
+                <h5>Please edit the information for user <em>{{ uid }}</em> in the fields below:</h5>
                 {{ wtf.form_field(form.gn) }}
                 {{ wtf.form_field(form.sn) }}
                 {{ wtf.form_field(form.email) }}
                 {{ wtf.form_field(form.confirm_email) }}
-                <input class="btn btn-primary" type="submit" value="Update User"/>
+                <h5>Please re-enter your password and select Save Changes to save your changes:</h5>
+                {{ wtf.form_field(form.password) }}
+                 <input class="btn btn-primary" type="submit" value="Save Changes"/>
                 <input class="btn btn-primary" type="reset" value="Clear"/>
             </form>
         </div>
