Add modified views and base.html for package tracker

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -55,6 +55,11 @@
                             </a>
                         </li>
                         <li>
+                            <a href="{{ url_for('reports.package_tracker') + '?days=1' }}">
+                                Package tracker
+                            </a>
+                        </li>
+                        <li>
                             <a href="{{ url_for('reports.recent_uploads') + '?days=1' }}">
                                 Recent uploads (1 day)
                             </a>
