Remove unused query parameter for package_tracker url

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -55,7 +55,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{{ url_for('reports.package_tracker') + '?days=1' }}">
+                            <a href="{{ url_for('reports.package_tracker') }}">
                                 Package tracker
                             </a>
                         </li>
