--- a/webapp/reports/templates/report_no_public.html
+++ b/webapp/reports/templates/report_no_public.html
@@ -2,7 +2,7 @@
 
 {% block app_content %}
     <h1>PASTAplus Resources Lacking Public Read Access</h1>
-    <h2>Metadata Resources</h2>
+    <h2>Metadata Resources ({{ len_metadata_resources }})</h2>
     <table class="table table-striped">
     <tr>
         <th>Package ID</th>
@@ -18,7 +18,7 @@
     {% endfor %}
     </table>
 
-    <h2>Data Resources</h2>
+    <h2>Data Resources ({{ len_data_resources }})</h2>
     <table class="table table-striped">
     <tr>
         <th>Package ID</th>
