Display the report time.

--- a/webapp/reports/templates/report_no_public.html
+++ b/webapp/reports/templates/report_no_public.html
@@ -2,6 +2,7 @@
 
 {% block app_content %}
     <h1>PASTAplus Resources Lacking Public Read Access</h1>
+    <h4>Report Generated: {{ modification_date }}</h4>
     <h2>Metadata Resources ({{ len_metadata_resources }})</h2>
     <table class="table table-striped">
     <tr>
