--- a/webapp/reports/templates/report_offline.html
+++ b/webapp/reports/templates/report_offline.html
@@ -2,6 +2,7 @@
 
 {% block app_content %}
     <h1>PASTA Data Entities with Offline Distribution</h1>
+    <h4>Report Generated: {{ modification_date }}</h4>
     <h2>Offline Data Resources ({{ len_offline_resources }})</h2>
     <table class="table table-striped">
     <tr>
