Cosmetic changes to web pages

--- a/webapp/health/templates/glance.html
+++ b/webapp/health/templates/glance.html
@@ -9,7 +9,7 @@
 <h1 align="center">Health at a glance</h1>
 <h4 align="center">As of: {{ system.timestamp(local=True) }}</h4>
 
-<h3 align="left">PASTA Server Infrastructure</h3>
+<h3 align="left">PASTA+ Server Infrastructure</h3>
 <table class="table table-bordered">
     <tr>
         <th width="20%" style="text-align: center">Tier</th>
