--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -46,32 +46,32 @@
                     <ul class="dropdown-menu">
                         <li>
                             <a href="{{ url_for('reports.render_no_public') }}">
-                                No public access
+                                No Public Access (admin)
                             </a>
                         </li>
                         <li>
                             <a href="{{ url_for('reports.render_offline') }}">
-                                Offline data
+                                Offline Data (admin)
                             </a>
                         </li>
                         <li>
                             <a href="{{ url_for('reports.package_tracker') }}">
-                                Package tracker
+                                Package Tracker
                             </a>
                         </li>
                         <li>
                             <a href="{{ url_for('reports.recent_uploads') + '?days=1' }}">
-                                Recent uploads (1 day)
+                                Recent Uploads (1 day)
                             </a>
                         </li>
                          <li>
                             <a href="{{ url_for('reports.recent_uploads') + '?days=7' }}">
-                                Recent uploads (7 days)
+                                Recent Uploads (7 days)
                             </a>
                         </li>
                         <li>
                             <a href="{{ url_for('reports.recent_uploads') + '?days=30' }}">
-                                Recent uploads (30 days)
+                                Recent Uploads (30 days)
                             </a>
                         </li>
                    </ul>
@@ -79,7 +79,7 @@
                 <li class="dropdown">
                     <a aria-expanded="false" aria-haspopup="true"
                        class="dropdown-toggle" data-toggle="dropdown" href="#"
-                       role="button">PASTA
+                       role="button">PASTA+
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
