Add upload report menu item

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -74,6 +74,11 @@
                                 Recent Uploads (30 days)
                             </a>
                         </li>
+                        <li>
+                            <a href="{{ url_for('reports.upload_report') }}">
+                                Upload Report
+                            </a>
+                        </li>
                    </ul>
                 </li>
                 <li class="dropdown">
