Minor table header edit

--- a/webapp/reports/templates/recent_uploads.html
+++ b/webapp/reports/templates/recent_uploads.html
@@ -12,7 +12,7 @@
     <tr>
         <th width="10%" style="text-align: center"> </th>
         <th width="30%" style="text-align: center">Package ID</th>
-        <th style="text-align: center">Upload Time</th>
+        <th style="text-align: center">Upload Date-Time</th>
     </tr>
     {% for result in result_set %}
         <tr>
