--- a/webapp/reports/templates/upload_report.html
+++ b/webapp/reports/templates/upload_report.html
@@ -26,6 +26,7 @@
                 {{ wtf.form_field(form.scope) }}
                 {{ wtf.form_field(form.start_date) }}
                 {{ wtf.form_field(form.end_date) }}
+                {{ wtf.form_field(form.show_title) }}
                 <input class="btn btn-primary" type="submit" value="Submit"/>
                 <input class="btn btn-primary" type="reset" value="Clear"/>
             </form>
