--- a/webapp/reports/templates/upload_report_stats.html
+++ b/webapp/reports/templates/upload_report_stats.html
@@ -6,10 +6,18 @@
 
     <table align="center" class="table table-striped table-bordered">
     <tr>
-        <th width="10%" style="text-align: center"> </th>
-        <th width="20%" style="text-align: center">Package ID</th>
-        <th width="40%" style="text-align: center">DOI</th>
-        <th width="30%" style="text-align: center">Upload Date-Time</th>
+        {% if show_title %}
+            <th width="5%" style="text-align: center"> </th>
+            <th width="15%" style="text-align: center">Package ID</th>
+            <th width="35%" style="text-align: center">DOI</th>
+            <th width="30%" style="text-align: center">Title</th>
+            <th width="15%" style="text-align: center">Upload Date-Time</th>
+        {% else %}
+            <th width="10%" style="text-align: center"> </th>
+            <th width="20%" style="text-align: center">Package ID</th>
+            <th width="40%" style="text-align: center">DOI</th>
+            <th width="30%" style="text-align: center">Upload Date-Time</th>
+        {% endif %}
     </tr>
     {% for result in result_set %}
         <tr>
@@ -18,7 +26,10 @@
             <td style="text-align: center">{{ result[0] }}</td>
             <td style="text-align: center"><a href="{{ href }}">{{ result[1] }}</a></td>
             <td style="text-align: center">{{ result[2] }}</td>
-            <td style="text-align: center">{{ result[3] }}</td>
+            {% if show_title %}
+                <td style="text-align: left">{{ result[3] }}</td>
+            {% endif %}
+            <td style="text-align: center">{{ result[4] }}</td>
         </tr>
     {% endfor %}
     </table>
