Added admin DOI report page

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -55,6 +55,11 @@
                             </a>
                         </li>
                         <li>
+                            <a href="{{ url_for('reports.render_doi_report') }}">
+                                DOI Report (admin)
+                            </a>
+                        </li>
+                        <li>
                             <a href="{{ url_for('reports.package_tracker') }}">
                                 Package Tracker
                             </a>
