--- a/webapp/health/templates/glance.html
+++ b/webapp/health/templates/glance.html
@@ -8,6 +8,9 @@
 {% block app_content %}
 <h1 align="center">Health at a glance</h1>
 <h4 align="center">As of: {{ system.timestamp(local=True) }}</h4>
+{% if system.stale() %}
+    <h4 align="center" class="alert-danger">WARNING: stale timestamp</h4>
+{% endif %}
 
 <h3 align="left">PASTA+ Server Infrastructure</h3>
 <table class="table table-bordered">
