--- a/webapp/health/templates/server.html
+++ b/webapp/health/templates/server.html
@@ -8,6 +8,9 @@
 {% block app_content %}
 <h1 align="center">{{ server }}</h1>
 <h4 align="center">As of: {{ system.timestamp(local=True) }}</h4>
+{% if system.stale() %}
+    <h4 align="center" class="alert-danger">WARNING: stale timestamp</h4>
+{% endif %}
 
 <table class="table table-bordered">
     <tr>
