Add site report menu item

--- a/webapp/home/templates/base.html
+++ b/webapp/home/templates/base.html
@@ -84,6 +84,11 @@
                                 Upload Report
                             </a>
                         </li>
+                        <li>
+                            <a href="{{ url_for('reports.site_report') }}">
+                                Site Report
+                            </a>
+                        </li>
                    </ul>
                 </li>
                 <li class="dropdown">
