--- a/webapp/reports/templates/site_report.html
+++ b/webapp/reports/templates/site_report.html
@@ -18,7 +18,7 @@
 
     {# application content needs to be provided in the app_content block #}
     {% block app_content %}
-    <h1>PASTA Upload Report</h1>
+    <h1>Site data package report</h1>
     <div class="row">
         <div class="col-md-4">
             <form method="POST" action="" class="form" role="form">
